Added model for projects

--- a/demo/src/main/resources/templates/successAuth.html
+++ b/demo/src/main/resources/templates/successAuth.html
@@ -12,7 +12,7 @@
 
     <div class="button-group">
         <a href="/home" class="btn">На главную</a>
-        <a href="#" class="btn">Проекты</a>
+        <a href="/projects" class="btn">Проекты</a>
     </div>
 </div>
 
