--- a/demo/src/main/resources/templates/personal_cabinet.html
+++ b/demo/src/main/resources/templates/personal_cabinet.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Добро пожаловать в личный кабинет!</h1>
 <p>Вы успешно вошли в систему.</p>
+<a href="/projects">Вернуться к проекту</a>
 <a href="/auth/logout" class="btn">Выйти из аккаунта</a>
 </body>
 </html>
