--- a/demo/src/main/resources/templates/projects.html
+++ b/demo/src/main/resources/templates/projects.html
@@ -6,39 +6,46 @@
     <title>Проекты</title>
 </head>
 <body>
-<h1>Проекты</h1>
-<div>
-    <a href="/projects/create" class="btn">Создать проект</a>
-</div>
-<div>
-    <h2>Список проектов</h2>
-    <ul>
-        <li th:each="project : ${projects}">
-            <span th:text="${project.name}"></span>
-            <span th:text="${project.startDate}"></span>
+<h1>Ваши проекты</h1>
+
+<h2>Проекты, которые вы управляете:</h2>
+<ul>
+    <th:block th:each="project : ${managedProjects}">
+        <li>
+            <!-- Ссылка на редактирование проекта -->
+            <a th:href="@{/projects/{id}(id=${project.id})/edit}" th:text="${project.name}"></a>
+            <p th:text="${project.description}"></p>
+            <p>Дата начала: <span th:text="${#temporals.format(project.startDate, 'dd.MM.yyyy HH:mm')}"></span></p>
+            <p>Дата окончания:
+                <span th:if="${project.endDate != null}"
+                      th:text="${#temporals.format(project.endDate, 'dd.MM.yyyy HH:mm')}"></span>
+                <span th:if="${project.endDate == null}">Дата окончания не указана</span>
+            </p>
+
+            <!-- Кнопка для перехода на страницу изменения исполнителей -->
+            <a th:href="@{/projects/{id}/editAssignees(id=${project.getId()})}">
+                <button>Изменение исполнителей</button>
+            </a>
         </li>
-    </ul>
-</div>
+    </th:block>
+</ul>
 
-<style>
-    body {
-        font-family: Arial, sans-serif;
-    }
+<h2>Проекты, в которых вы участвуете:</h2>
+<ul>
+    <th:block th:each="project : ${assignedProjects}">
+        <li>
+            <a th:href="@{/projects/{id}(id=${project.id})}" th:text="${project.name}"></a>
+            <p th:text="${project.description}"></p>
+            <p>Дата начала: <span th:text="${#temporals.format(project.startDate, 'dd.MM.yyyy HH:mm')}"></span></p>
+            <p>Дата окончания:
+                <span th:if="${project.endDate != null}"
+                      th:text="${#temporals.format(project.endDate, 'dd.MM.yyyy HH:mm')}"></span>
+                <span th:if="${project.endDate == null}">Дата окончания не указана</span>
+            </p>
+        </li>
+    </th:block>
+</ul>
 
-    .btn {
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        text-decoration: none;
-        font-size: 16px;
-    }
-
-    .btn:hover {
-        background-color: #45a049;
-    }
-</style>
+<a href="/projects/create">Создать новый проект</a>
 </body>
 </html>
