--- a/demo/src/main/resources/templates/logout-success.html
+++ b/demo/src/main/resources/templates/logout-success.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Выход из аккаунта</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+            text-align: center;
+        }
+
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+            font-size: 16px;
+            padding: 10px 20px;
+            background-color: #fff;
+            border: 1px solid #4CAF50;
+            border-radius: 4px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        a:hover {
+            background-color: #4CAF50;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <h1>Вы успешно вышли из аккаунта.</h1>
-    <a href="/">Вернуться на главную</a>
+<h1>Вы успешно вышли из аккаунта.</h1>
+<a href="/">Вернуться на главную</a>
 </body>
 </html>
