Просмотр списка задач. Проект доделан на 60%.

--- a/demo/src/main/resources/templates/add_task.html
+++ b/demo/src/main/resources/templates/add_task.html
@@ -100,6 +100,9 @@
     <option value="POSTPONED">Отложена</option>
   </select>
 
+  <label for="startDate">Дата начала:</label>
+  <input type="date" id="startDate" name="startDate" required />
+
   <label for="dueDate">Срок выполнения:</label>
   <input type="date" id="dueDate" name="dueDate" />
 
