--- a/demo/src/main/resources/templates/projects.html
+++ b/demo/src/main/resources/templates/projects.html
@@ -106,7 +106,7 @@
                       th:text="${#temporals.format(project.endDate, 'dd.MM.yyyy HH:mm')}"></span>
                 <span th:if="${project.endDate == null}">Дата окончания не указана</span>
             </p>
-            <a th:href="@{/projects/{id}/editAssignees(id=${project.getId()})}">
+            <a th:href="@{/projects/{id}/editAssignees(id=${project.id})}">
                 <button>Изменение исполнителей</button>
             </a>
         </li>
@@ -125,6 +125,10 @@
                       th:text="${#temporals.format(project.endDate, 'dd.MM.yyyy HH:mm')}"></span>
                 <span th:if="${project.endDate == null}">Дата окончания не указана</span>
             </p>
+            <!-- Исправление для кнопки "Просмотр задач" -->
+            <a th:href="@{/projects/{projectId}/viewTasks(projectId=${project.id})}">
+                <button>Просмотр задач</button>
+            </a>
         </li>
     </th:block>
 </ul>
