Personal tasks done

--- a/demo/src/main/resources/templates/personal_cabinet.html
+++ b/demo/src/main/resources/templates/personal_cabinet.html
@@ -59,6 +59,7 @@
 <h1>Добро пожаловать в личный кабинет!</h1>
 <p>Вы успешно вошли в систему.</p>
 <a href="/projects">Вернуться к проекту</a>
+<a href="/personalTasks">Todo List</a>
 <a href="/auth/logout" class="btn">Выйти из аккаунта</a>
 </body>
 </html>
