--- a/demo/src/main/resources/templates/personal_cabinet.html
+++ b/demo/src/main/resources/templates/personal_cabinet.html
@@ -46,12 +46,20 @@
             background-color: #dc3545;
         }
 
+        .btn-notifications {
+            background-color: #28a745;
+        }
+
         a:hover {
             background-color: #0056b3;
         }
 
         .btn:hover {
             background-color: #c82333;
+        }
+
+        .btn-notifications:hover {
+            background-color: #218838;
         }
     </style>
 </head>
@@ -60,6 +68,7 @@
 <p>Вы успешно вошли в систему.</p>
 <a href="/projects">Вернуться к проекту</a>
 <a href="/personalTasks">Todo List</a>
+<a href="/notifications" class="btn-notifications">Уведомления</a>
 <a href="/auth/logout" class="btn">Выйти из аккаунта</a>
 </body>
 </html>
